--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <header> 
             <nav class="navbar navbar-expand-lg navbar-light">
                 <a class="navbar-brand" href="/index.html">
-                    <img src="/assets/img/logo-horizontal-color.png" alt="">
+                    <img src="assets/img/logo-horizontal-color.png" alt="">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
@@ -60,20 +60,20 @@
                 </h1>
             </div>
             <div class="banner-img">
-                <img src="/assets/img/banner-home.png" alt="">
+                <img src="assets/img/banner-home.png" alt="">
             </div>
         </div>
         <div class="container" id="services">
             <div class="cards-con" id="cards1">
                 <div class="card">
                     <a class="card-link" href="">
-                        <img class="card-img-top" id="dya" src="/assets/img/dya-logo.png" alt="">
+                        <img class="card-img-top" id="dya" src="assets/img/dya-logo.png" alt="">
                         <h3 class="card-title">DATA & ANALYTICS</h3>
                     </a>
                 </div>
                 <div class="card">
                     <a class="card-link" href="">
-                        <img class="card-img-top" id="assess" src="/assets/img/assess-logo.png" alt="">
+                        <img class="card-img-top" id="assess" src="assets/img/assess-logo.png" alt="">
                         <h3 class="card-title">ASESORÍAS</h3>
                     </a>
                 </div>
@@ -81,13 +81,13 @@
             <div class="cards-con" id="cards2">
                 <div class="card">
                     <a class="card-link" href="">
-                        <img class="card-img-top" id="cv" src="/assets/img/cv-logo.png" alt="">
+                        <img class="card-img-top" id="cv" src="assets/img/cv-logo.png" alt="">
                         <h3 class="card-title">ARMÁ TU CV</h3>
                     </a>
                 </div>
                 <div class="card">
                     <a class="card-link" href="">
-                        <img class="card-img-top" id="material" src="/assets/img/material-logo.png" alt="">
+                        <img class="card-img-top" id="material" src="assets/img/material-logo.png" alt="">
                         <h3 class="card-title">MATERIAL</h3>
                     </a>
                 </div>
