--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
               </nav>
         </header>
         <div class="banner-con">
-            <div class="banner-text">
-                <h1>Lo que necesitás <br>
-                saber para dar tu <br>
-                primer paso en <br>
-                Data & Analytics
-                </h1>
-            </div>
             <div class="banner-img">
                 <img src="assets/img/banner-home.png" alt="">
+            </div>
+            <div class="banner-text">
+                <h1>Lo que necesitás 
+                saber para dar tu <br>
+                primer paso en 
+                Data & Analytics
+                </h1>
             </div>
         </div>
         <div class="container" id="services">
